@@ -1,3 +1,4 @@
+* Finish v1 for android 
 * Remove some package do not use 
 * Clean more 
 * Fix send PQD on android 
